# lf11a_project_frontend

./: .env.example  .gitignore  Cargo.toml  DESIGN_GUIDE.md  README.md
.github/workflows/: ci.yml
assets/: style.css
docs/: CONFIGURATION.md  PACKAGING.md  PROJECT-STRUCTURE.md  QUICKSTART.md  WINDOWS-INSTALLER.md  WINDOWS_BUILD.md
scripts/: package.sh  quick-build.sh  setup_gtk4_windows.sh  setup_windows.sh
src/: config.rs  main.rs  mod.rs  tests.rs
src/api/: client.rs  mod.rs  models.rs
src/gui/: api.rs  app.rs  colors.rs  components.rs  dialog_handlers.rs  dialogs.rs  forms.rs  main_window.rs  mod.rs
src/gui/dialogs/: department_dialog.rs  employee_dialog.rs  mod.rs  salary_grade_dialog.rs
src/gui/views/: department_view.rs  departments.rs  employee_view.rs  employees.rs  mod.rs  salary_grade_view.rs  salary_grades.rs
tests/: api_client_tests.rs  config_tests.rs  models_tests.rs
tests/common/: mod.rs
